# docs/swagger.json
@@ -2247,6 +2247,12 @@
                         "type": "string"
                     }
                 },
+                "remediation": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "string"
+                    }
+                },
                 "sandboxes": {
                     "type": "object",
                     "additionalProperties": true
